--- a/gb/24/6/15/n14270719.md
+++ b/gb/24/6/15/n14270719.md
@@ -11,14 +11,14 @@
 <p>6月4日，蒙大拿州卡利斯佩尔摄影师艾琳·布拉滕（Erin Braaten）一家站在悬崖边俯瞰拉马尔河，看到下面有数百头野牛，棕褐色的小牛在母亲身边嬉戏，而笨重的公牛则在泥泞中打滚。</p>
 <p>突然，布拉滕的丈夫TJ阿蒙德（TJ Ammond）透过双筒望远镜发现了庞大牛群中有一头白色的小牛。</p>
 <p>他不由自主地大喊道：“我看到了一只白色的！”</p>
-<p>“或者不是——那是一只叉角羚，”他很快纠正道。“它是白色的，而且很小。”</p>
-<p>随后，布拉滕用长焦镜头拍摄了几张这只小巧笨拙的白野牛犊依偎在母亲身边的照片<ahref="https://www.facebook.com/DancingAspensPhotography/posts/pfbid02bhF1GVmF4mtpgX5SLz6BPEEWcpL37BMqBekDHDByGg7b2kp9sXsrWirVYTJZKFZPl">点击看照片</a>），显然当时它刚出生不久。它是在拉马尔河岸边出生的。整个过程持续了半个多小时。</p>
+<p>“或者不是——那是一只叉角羚”，他很快纠正道，“它是白色的，而且很小。”</p>
+<p>随后，布拉滕用长焦镜头拍摄了几张这只小巧笨拙的白野牛犊依偎在母亲身边的照片（<span style="color: #0000ff;"><strong><a style="color: #0000ff;" href="https://www.facebook.com/DancingAspensPhotography/posts/pfbid02bhF1GVmF4mtpgX5SLz6BPEEWcpL37BMqBekDHDByGg7b2kp9sXsrWirVYTJZKFZPl">点击看照片</a></strong></span>），显然当时它刚出生不久。它是在拉马尔河岸边出生的。整个过程持续了半个多小时。</p>
 <p>许多美洲原住民将白野牛犊视为神圣之物，他们将黄石公园出生的消息视为吉兆。</p>
 <p>拉马尔山谷是黄石公园的野生动物观赏胜地，带着望远镜的游客和带着长焦镜头的摄影师成群结队，但很少有人看到这只白野牛犊，也没有人再报告看到它。即便布拉滕一家在两天后再回去查看时，他们也没有再见到这只白野牛犊。</p>
-<figure id="attachment_13807865" aria-describedby="caption-attachment-13807865" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/08/id13807865-a3972f763241ca1b422304357c4d34dd.jpeg"><img class="size-medium wp-image-13807865" src="https://i.epochtimes.com/assets/uploads/2022/08/id13807865-a3972f763241ca1b422304357c4d34dd-450x450.jpeg" alt="" width="450" b="450" /></a><figcaption id="caption-attachment-13807865" class="wp-caption-text">黄石公园的湖、瀑布、岩石和野牛。（施萍/大纪元、新唐人）</figcaption></figure>
+<figure id="attachment_13807865" aria-describedby="caption-attachment-13807865" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/08/id13807865-a3972f763241ca1b422304357c4d34dd.jpeg"><img decoding="async" class="size-medium wp-image-13807865" src="https://i.epochtimes.com/assets/uploads/2022/08/id13807865-a3972f763241ca1b422304357c4d34dd-450x450.jpeg" alt="" width="450" b="450" /></a><figcaption id="caption-attachment-13807865" class="wp-caption-text">黄石公园的湖、瀑布、岩石和野牛。（施萍/大纪元、新唐人）</figcaption></figure>
 <p>跟传说中一样，这只白野牛犊是很神秘的。</p>
 <p>美联社报导说，南达科他州的拉科塔族、达科他族和纳科塔奥亚特族精神领袖阿沃尔·洛金霍斯酋长（Arvol Looking Horse）说，这一事件对美洲原住民来说意义重大。</p>
-<p>“事实上，我们都知道它出生了，这对我们来说就像一个奇迹，”洛金霍斯说。</p>
+<p>“事实上，我们都知道它出生了，这对我们来说就像一个奇迹。”洛金霍斯说。</p>
 <p>据美洲印第安部落成员称，这只白野牛犊的出生兑现了拉科塔族的一个预言。</p>
 <p>根据拉科塔族的传说，大约2000年前，当时野牛正在消失，食物即将耗尽，一位女神出现了，她向一名部落成员赠送了碗状烟斗和一捆东西，然后教拉科塔族人如何祈祷。</p>
 <p>她说，烟斗可以用来把水牛带到他们的地区觅食。</p>
@@ -34,32 +34,32 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/15/n4504697.md#1">黄石公园黑熊觅食 游客车内一片狼藉</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/25/n13671343.md#1">黄石公园探秘：发现火山区巨大地下管道系统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270600.md#1">全食超市CEO：职场中有种员工最不受欢迎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270384.md#1">肺癌晚期病人为爱犬寻找新家 媒体纷纷报导</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283023.md#1">为何美国人不满意当前的小费文化</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/27/n14167911.md#1">一段婆媳情让她人生遇转机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267369.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（上）活捉外星人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265855.md#1">【母亲节征文】鸭头?丫头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270522.md#1">【马克时空】诺曼底登陆80周年 对台海的借鉴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269850.md#1">【百年真相】任仲夷的“政治遗言”为何落空？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269336.md#1">价格下跌股价重挫 贵州茅台面临恐慌性抛售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269144.md#1">丹麦召回韩国辛辣面 原因你可能想不到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269230.md#1">大陆端午档电影10年最差 刘德华新片或巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269537.md#1">子瑜生日因忙碌挨饿开直播 定延火速写留言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269333.md#1">罗素克洛自认对《神鬼战士》续集有少许嫉妒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269285.md#1">高云翔被爆低调再婚 与圈外太太育有一女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269948.md#1">收到中共邀约拍统战片 台女星何以奇秒拒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268931.md#1">如何让蔬果存放久一点？ 专家教你几招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270016.md#1">护理师提醒：人年过50 少补充一种维生素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269547.md#1">想改善注意力？ 专家：别碰这5种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262185.md#1">膝关节退化不是年长者才有 跟健身教练学7招自我复健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/21/n14255019.md#1">大黄护肝肾 减肥排毒 夏日搭1种水果是绝配</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/15/n14270719.htm">黄石公园诞生白色野牛 原住民称这是吉兆</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/15/n14270719.htm">黄石公园诞生白色野牛 原住民称这是吉兆</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270719.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
